# symforce

./: .clang-format  .coveragerc  .gitattributes  .gitignore  CITATION  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  dev_requirements.txt  dev_requirements_310.txt  dev_requirements_39.txt  dev_requirements_py38.txt  prettier.config.mjs  pylintrc  pyproject.toml  requirements.txt  requirements_build.txt  requirements_dev_py310.txt  requirements_dev_py311.txt  requirements_dev_py312.txt  requirements_dev_py313.txt  requirements_dev_py38.txt  requirements_dev_py39.txt  ruff.toml  setup.cfg  setup.py
symforce/benchmarks/: CMakeLists.txt  README.md  run_benchmarks.py  run_matmul_benchmark.py
symforce/benchmarks/inverse_compose_jacobian/: README.md  generate_inverse_compose_jacobian.py  inverse_compose_jacobian_benchmark.cc
symforce/benchmarks/matrix_multiplication/: generate_matrix_multiplication_benchmark.py  matrix_multiplication_benchmark.cc.jinja
symforce/benchmarks/notebooks/: inverse_compose.ipynb  jax_autodiff.ipynb  jax_inverse_compose.ipynb  jax_matmul.ipynb  jax_robot_localization.ipynb  matmul.ipynb  matmul_plots.ipynb  robot_localization.ipynb
symforce/benchmarks/robot_3d_localization/: robot_3d_localization_benchmark.cc  robot_3d_localization_ceres.h  robot_3d_localization_gtsam.h
symforce/examples/: CMakeLists.txt
symforce/examples/bundle_adjustment/: README.md  build_example_state.cc  build_example_state.h  build_values.py  factor_residuals.py  generate_dynamic_problem.py  generate_fixed_problem.py  run_bundle_adjustment.cc  run_bundle_adjustment.h  symforce_dynamic_size_example.cc  symforce_fixed_size_example.cc
symforce/examples/bundle_adjustment_dynamic_size/: build_example_state.cc  build_example_state.h  factor_residuals.py  generate_dynamic_problem.py  symforce_dynamic_size_example.cc  symforce_dynamic_size_example.h
symforce/examples/bundle_adjustment_fixed_size/: README.md  build_example_state.cc  build_example_state.h  build_values.py  generate_fixed_problem.py  run_bundle_adjustment.cc  run_bundle_adjustment.h  symforce_fixed_size_example.cc  symforce_fixed_size_example.h
symforce/examples/bundle_adjustment_in_the_large/: CMakeLists.txt  README.md  bundle_adjustment_in_the_large.cc  bundle_adjustment_in_the_large.py  download_dataset.py
symforce/examples/custom_factor_generation/: README.md  factor_residuals.py  generate_factors.py
symforce/examples/example_utils/: bundle_adjustment_util.h  example_state_helpers.h
symforce/examples/robot_2d_localization/: README.md  plotting.py  robot_2d_localization.py  run_localization.cc  run_localization.h
symforce/examples/robot_2d_triangulation/: plotting.py  robot_2d_triangulation.py
symforce/examples/robot_3d_localization/: README.md  common.h  measurements.cc.jinja  measurements.h.jinja  plotting.py  robot_3d_localization.py  run_dynamic_size.cc  run_dynamic_size.h  run_fixed_size.cc  run_fixed_size.h
symforce/opt/: CMakeLists.txt  assert.cc  assert.h  barrier_functions.py  dense_cholesky_solver.h  dense_linearizer.cc  dense_linearizer.h  dump_graph.cc  dump_graph.h  eigen_sparse_solver.h  epsilon.cc  epsilon.h  factor.cc  factor.h  factor.py  factor.tcc  fixed_size_optimizer.h  fixed_size_optimizer.tcc  fmt_compat.h  gnc.h  gnc_optimizer.cc  gnc_optimizer.h  key.cc  key.h  levenberg_marquardt_solver.h  levenberg_marquardt_solver.tcc  linearization.cc  linearization.h  linearization_wrapper_lm.h  linearizer.cc  linearizer.h  linearizer.tcc  marginalization.cc  marginalization.h  noise_models.py  numeric_factor.py  objective.py  optimization_problem.py  optimization_stats.h  optimizer.cc  (+19 more)
symforce/opt/_internal/: generated_residual_cache.py
symforce/opt/cholesky/: LICENSE  README  assert.cc  assert.h  sparse_cholesky_solver.cc  sparse_cholesky_solver.h  sparse_cholesky_solver.tcc
symforce/opt/internal/: covariance_utils.h  derivative_checker.h  factor_utils.h  hash_combine.h  levenberg_marquardt_state.h  linearized_dense_factor_pool.h  linearizer_selector.h  linearizer_utils.h  logging_configure.cc  logging_configure.h  optimizer_utils.h  tic_toc.cc  (+2 more)
symforce/pybind/: CMakeLists.txt  cc_factor.cc  cc_factor.h  cc_key.cc  cc_key.h  cc_linearization.cc  cc_linearization.h  cc_logger.cc  cc_logger.h  cc_optimization_stats.cc  cc_optimization_stats.h  cc_optimizer.cc  cc_optimizer.h  cc_slam.cc  cc_slam.h  cc_sym.cc  cc_sym.pyi  cc_sym.pyi.jinja  cc_values.cc  cc_values.h  lcm_type_casters.h  sym_type_casters.cc  sym_type_casters.h
symforce/slam/: CMakeLists.txt
test/: CMakeLists.txt  Makefile  cam_atan_test.py  cam_double_sphere_test.py  cam_equidistant_epipolar_test.py  cam_equirectangular_test.py  cam_extrinsics_test.py  cam_function_codegen_cpp_test.cc  cam_linear_test.py  cam_orthographic_test.py  cam_package_cpp_test.cc  cam_package_python_test.py  cam_polynomial_test.py  cam_spherical_test.py  catch_main.cc  codegen_cpp_test.cc  codegen_explicit_template_instantiation_test.cc  codegen_function_test.cc  codegen_matrix_order_test.cc  codegen_multi_function_test.cc  codegen_nan_test.cc  codegen_sparse_matrix_test.cc  complex_test.py  count_ops_test.py  custom_function_replacement_symengine_test.cc  custom_function_replacement_sympy_test.cc  custom_function_replacement_test.cc  dual_quaternion_test.py  geo_complex_test.py  geo_dual_quaternion_test.py  geo_matrix_test.py  geo_package_cpp_test.cc  geo_package_python_test.py  geo_pose2_se2_test.py  geo_pose2_test.py  geo_pose3_se3_test.py  geo_pose3_test.py  geo_quaternion_test.py  geo_rot2_test.py  geo_rot3_test.py  (+120 more)
test/include/: custom_function_replacement_header.h
test/symforce_function_codegen_test_data/: az_el_from_point.h  az_el_from_point.py  az_el_from_point_symengine.cc  az_el_from_point_symengine.py  az_el_from_point_sympy.cc  az_el_from_point_sympy.py  codegen_multi_function_test1.h  codegen_multi_function_test2.h  codegen_test_cpp.h  codegen_test_python.py  heaviside.h  identity_dist_jacobian.h  pixel_to_ray_and_back.h  test_no_docstring.cc
test/test_data/: javascript_codegen_example.js  py_factor_test.gv
(+1084 files in other folders)
